범위 밖 좌표 계산 이슈 해결